Made some changes: - removed CandidateValidationException class; - improved CandidateValidator class; - improved StreamPractice class: getOddNumsAverage method was simplified; removed redundant const CANDIDATE_VALIDATOR for validateCandidates method; replaced terminal operation from 'collect(Collectors.toList())' to 'toList()' in methods.